fixed z-index and sceleton

--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -16,7 +16,8 @@
 .input-search::placeholder {
   position: absolute;
   -webkit-transform: translate3d(0, 0, 0);
-  z-index: 9997;
+  transform: translate(0, 0, 0);
+  z-index: 99;
 }
 
 .search-icon-input {
